--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Chad Global Market - Your reliable source for quality general goods." />
     <title>Chad Global Market</title>
     <script type="module">
       if (import.meta.hot?.on) {
